# AutoTrade

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  test_lumibot_backtest.py  test_lumibot_simple.py
autotrade/: alpha_strategy.py  config.yaml  qlib_ml_strategy.py  trade_manager.py  web_server.py
autotrade/core/: __init__.py  config.py
autotrade/data/: __init__.py  providers.py  qlib_adapter.py
autotrade/execution/strategies/: momentum_strategy.py  qlib_ml_strategy.py
autotrade/lumibot_patches/: __init__.py  alpaca_patches.py  strategy_patches.py
autotrade/ml/: __init__.py  inference.py  model_manager.py  trainer.py
autotrade/research/data/: __init__.py  providers.py  qlib_adapter.py
autotrade/research/features/: __init__.py
autotrade/shared/config/: loader.py
autotrade/strategies/: __init__.py  momentum_strategy.py  qlib_ml_strategy.py  qlib_strat.py  runner.py  simple_strategy.py  test_position_management.py
autotrade/templates/: backtest.html  index.html  layout.html
autotrade/ui/static/: utils.js
autotrade/ui/templates/: backtest.html  cache.html  data.html  index.html  (+2 more)
autotrade/utils/: timezone.py
autotrade/web/: __init__.py  backtest_tasks.py  server.py
configs/: qlib_ml_config.yaml  universe.yaml
datasets/: AAPL_5MIN.parquet  AMZN_5MIN.parquet  GOOGL_5MIN.parquet  META_5MIN.parquet  MSFT_5MIN.parquet  NVDA_5MIN.parquet  QQQ_5MIN.parquet  SPY_5MIN.parquet  TSLA_5MIN.parquet
docs/: DOCKER_K8S_QUICKSTART.md  K8S_POD_QUICKSTART.md  KUBERNETES.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
models/: .current_model
models/lightgbm_20260118_031302/: metadata.json  model.pkl
scripts/: docker-build.sh  init_qlib_data.py  k8s-delete-pod.sh  k8s-delete.sh  k8s-deploy.sh  k8s-run.sh  train_model.py
tests/: conftest.py  test_portfolio_history.py  test_qlib_ml.py
(+49 files in other folders)
