[project]
name = "autotrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 金融量化与交易
    "lumibot",                   # 交易机器人框架
    "alpaca-py>=0.43.2",         # Alpaca 交易所 API
    # 覆盖 lumibot 的 polars 依赖，使用 CPU 兼容版本
    # polars 默认版本需要 AVX/AVX2 等现代 CPU 指令，某些服务器不支持
    "polars-lts-cpu",            # polars 的 LTS CPU 兼容版本
]

# uv 依赖覆盖：将 lumibot 依赖的 polars 替换为 polars-lts-cpu
[tool.uv]
override-dependencies = [
    "polars-lts-cpu",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[tool.ruff]
# 行长度限制（与 Black 兼容）
line-length = 88
# 目标 Python 版本
target-version = "py311"
# 扫描的文件扩展名
include = ["*.py", "*.pyi", "**/pyproject.toml"]
# 排除目录
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
# 忽略的规则
ignore = [
    "E501",   # 行过长（由 formatter 处理）
    "B008",   # 函数调用作为默认参数（FastAPI 常用）
    "C901",   # 复杂度检查
]
# 允许自动修复的规则
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# 使用双引号
quote-style = "double"
# 缩进样式
indent-style = "space"
# 保留魔法尾随逗号
skip-magic-trailing-comma = false
# 自动识别行结束符
line-ending = "auto"

[tool.ruff.lint.isort]
# isort 配置
known-first-party = ["autotrade"]
force-single-line = false
lines-after-imports = 2
